# midas-journal-712

./: CMakeLists.txt  input.ptx  vtkPTXData.cxx  vtkPTXData.h  vtkPTXReader.cxx  vtkPTXReader.h  vtkPTXReader.xml  vtkPTXReaderData.cxx  vtkPTXReaderExample.cxx  vtkPTXReaderPlugin.cxx  vtkPTXReaderPlugin.h  vtkPTXReaderPluginExample.cxx  vtkPTXReaderTest.cxx  vtkPTXReader_GUI.xml  vtkPTXReader_ImageExample.cxx  vtkPTXReader_Legacy.cxx  vtkPTXReader_TriangulatePoints.cxx
